21/11 changes van afgelopen week

--- a/imagepoll/templates/imagepoll/base.html
+++ b/imagepoll/templates/imagepoll/base.html
@@ -1,6 +1,9 @@
+{% load staticfiles %}
+
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
   <head>
+    <link rel ="stylesheet" type="text/css" href ="{% static 'imagepoll/style.css' %}">
     {% block head %}
     {% endblock %}
   </head>
