--- a/imagepoll/templates/imagepoll/index.html
+++ b/imagepoll/templates/imagepoll/index.html
@@ -8,7 +8,10 @@
 {% for category in categories %}
   <h2> {{ category.name}}</h2>
     {% for item in category.item_set.all %}
-      <a href="{% url 'imagepoll:itemdetail' item_id=item.id %}">{{ item.name }}</a>
+      <a href="{% url 'imagepoll:itemdetail' item_id=item.id %}">
+      {% if item.image != None %}
+        <img src="{{ item.image.url }}" height="80" width="150">
+      {% endif %}</a>
     {% endfor %}
   {% endfor %}
 {% endblock %}
