user registration form

--- a/imagepoll/templates/imagepoll/base.html
+++ b/imagepoll/templates/imagepoll/base.html
@@ -3,14 +3,64 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
   <head>
-    <link rel ="stylesheet" type="text/css" href ="{% static 'imagepoll/style.css' %}">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
+    <link href='https://fonts.googleapis.com/css?family=Satisfy' rel='stylesheet' type='text/css'>
+    <link rel="stylesheet" type="text/css" href="{% static 'imagepoll/style.css' %}"/> <!-- WERKT NIET!? -->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.0/jquery.min.js"></script>
+    <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
     {% block head %}
     {% endblock %}
   </head>
   <body>
-    <h1>Feedbackshop</h1>
-    <hr>
-    <br>
+    <nav class="navbar navbar-inverse">
+      <div class="container-fluid">
+        <!-- Header -->
+        <div class = "navbar-header">
+          <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#topNavBar">
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+          </button>
+          <a class="navbar-brand" href="{% url 'imagepoll:index'%}">Feedbackshop</a>
+        </div>
+        <!-- Items navbar -->
+        <div class="collapse navbar-collapse" id="topNavBar">
+
+          <ul class="nav navbar-nav">
+            <li class ="">
+              <a href="{% url 'imagepoll:index'%}">
+                <span class="glyphicon glyphicon-cd" aria-hidden="true"></span>&nbsp; Categories
+              </a>
+            </li>
+            <li class ="">
+              <a href="#">
+                <span class="glyphicon glyphicon-music" aria-hidden="true"></span>&nbsp; Filters
+              </a>
+            </li>
+          </ul>
+
+          <form class= "navbar-form navbar-left" role="search" method="get" action="#">
+              <div class="form-group">
+                <input type="text" class="form-control" name="q"  values="">
+              </div>
+              <button type="submit" class="btn btn-default"> Search </button>
+          </form>
+
+          <ul class="nav navbar-nav navbar-right">
+
+            <li class ="">
+              <a href="#">
+                <span class="glyphicon glyphicon-off" aria-hidden="true"></span>&nbsp; Logout
+              </a>
+            </li>
+          </ul>
+
+
+        </div>
+
+      </div>
+    </nav>
+
     {% block body %}
     {% endblock %}
   </body>
